# distplusplus

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  TODO.md  sanitizer.supp
.github/actions/install-deps/: action.yaml
.github/workflows/: ccache.conf  main.yaml
protos/: .gitignore  CMakeLists.txt  distplusplus.proto
src/client/: CMakeLists.txt  client.cpp  client.hpp  config.cpp  config.hpp  fallback.hpp  main.cpp  parser.cpp  parser.hpp
src/common/: CMakeLists.txt  argsvec.hpp  bounds_span.hpp  common.cpp  common.hpp  compression_helper.cpp  compression_helper.hpp  constants.hpp  process_helper.cpp  process_helper.hpp  scopeguard.hpp  tempfile.cpp  tempfile.hpp
src/server/: .server.cpp.kate-swp  CMakeLists.txt  config.cpp  config.hpp  main.cpp  parser.cpp  parser.hpp  server.cpp  server.hpp
test/: BashTestLib.sh  BashTestVerify.sh  CMakeLists.txt  MiniServer.cpp  ServerMsgHelper.cpp  create_cov.sh  util.hpp
test/client/: CMakeLists.txt  TestClientCompile.sh  TestClientCompressNONE.sh  TestClientCompresszstd.sh  TestParserArgsFile.cpp  TestParserCheckInputFileCandidateC.cpp  TestParserCheckInputFileCandidateCXX.cpp  TestParserInfile.cpp  TestParserInputFileTwice.cpp  TestParserLocalFallback.cpp  TestParserMultiArgs.cpp  TestParserOutfile.cpp  TestParserTarget.cpp  TestParserXLang.cpp
test/common/: CMakeLists.txt  TestAssertAndRaiseBad.cpp  TestAssertAndRaiseGood.cpp  TestInitBoostLogging.cpp  TestMapCompiler.cpp  TestMapGRPCStatus.cpp  TestProcessHelper.cpp  TestProcessHelperBad.cpp  TestProcessHelperEnv.cpp  TestProcessHelperStderr.cpp  TestProcessHelperStdout.cpp  TestScopeGuard.cpp  TestScopeGuardDefuse.cpp  TestTempfile.cpp  TestTempfileContent.cpp  TestTempfileCreate.cpp  TestTempfileNoBasename.cpp  TestTempfileNoCleanup.cpp  TestTempfileNoName.cpp
test/server/: CMakeLists.txt  TestParser.cpp  TestParserBad.cpp  TestParserCPPArgsMulti.cpp  TestParserCPPArgsMultiBad.cpp  TestParserCPPArgsSingle.cpp  TestParserCPPArgsSingleStartsWith.cpp  TestParserCannotProcessSignal.cpp  TestParserNoDistributeMulti.cpp  TestParserNoDistributeSingle.cpp  TestParserNoDistributeSingleStartsWith.cpp  TestServerBadCompiler.sh  TestServerCompressBad.sh  TestServerCompressNONE.sh  TestServerCompressionBad.sh  TestServerCompressionzstd.sh  TestServerCompresszstd.sh  TestServerDisallowedCompiler.sh  TestServerNoDistribute.sh  TestServerNoListenAddress.sh  TestServerNoReservation.sh  TestServerReserveAndReap.sh  TestServerReserveAndServe.sh  TestServerStartup.sh
