add_library(common OBJECT "common.cpp")
add_library(distplusplus::common ALIAS common)
target_link_libraries(common Boost::log Boost::filesystem)
obj_propagate_targets(common)

add_library(compression_helper OBJECT "compression_helper.cpp")
add_library(distplusplus::common::compression_helper ALIAS compression_helper)
target_link_libraries(compression_helper distplusplus::protobuf Boost::log Boost::iostreams)
if(ZSTD)
    target_compile_definitions(compression_helper PUBLIC "DISTPLUSPLUS_WITH_ZSTD")
    target_compile_definitions(compression_helper INTERFACE "DISTPLUSPLUS_DEFAULT_COMPRESSION=zstd")
    target_compile_definitions(compression_helper INTERFACE "DISTPLUSPLUS_DEFAULT_COMPRESSION_STR=\"zstd\"")
else()
    target_compile_definitions(compression_helper INTERFACE "DISTPLUSPLUS_DEFAULT_COMPRESSION=NONE")
    target_compile_definitions(compression_helper INTERFACE "DISTPLUSPLUS_DEFAULT_COMPRESSION_STR=\"NONE\"")
endif()
obj_propagate_targets(compression_helper)
