add_library(common OBJECT "common.cpp")
add_library(distplusplus::common ALIAS common)
target_link_libraries(common Boost::log Boost::filesystem)
obj_propagate_targets(common)

add_library(process_helper OBJECT "process_helper.cpp")
add_library(distplusplus::common::process_helper ALIAS process_helper)
target_link_libraries(process_helper Boost::log Boost::filesystem)
obj_propagate_targets(process_helper)

add_library(tempfile OBJECT "tempfile.cpp")
add_library(distplusplus::common::tempfile ALIAS tempfile)
target_link_libraries(tempfile Boost::log)
obj_propagate_targets(tempfile)

add_library(compression_helper OBJECT "compression_helper.cpp")
add_library(distplusplus::common::compression_helper ALIAS compression_helper)
target_link_libraries(compression_helper distplusplus::protobuf Boost::log Boost::iostreams)
if(ZSTD)
    target_compile_definitions(compression_helper PUBLIC "DISTPLUSPLUS_WITH_ZSTD")
    target_compile_definitions(compression_helper INTERFACE "DISTPLUSPLUS_DEFAULT_COMPRESSION=zstd")
    target_compile_definitions(compression_helper INTERFACE "DISTPLUSPLUS_DEFAULT_COMPRESSION_FULL=distplusplus::CompressionType::zstd")
    target_compile_definitions(compression_helper INTERFACE "DISTPLUSPLUS_DEFAULT_COMPRESSION_STR=\"zstd\"")
else()
    target_compile_definitions(compression_helper INTERFACE "DISTPLUSPLUS_DEFAULT_COMPRESSION=NONE")
    target_compile_definitions(compression_helper INTERFACE "DISTPLUSPLUS_DEFAULT_COMPRESSION_FULL=distplusplus::CompressionType::NONE")
    target_compile_definitions(compression_helper INTERFACE "DISTPLUSPLUS_DEFAULT_COMPRESSION_STR=\"NONE\"")
endif()
obj_propagate_targets(compression_helper)
